------------------------------------------------------------------------
r2212 | rdahnke | 2023-06-09 14:10:08

Changed paths:
 M CHANGES.txt
 M cat_run.m
 M cat_surf_create_TPM_hull_surface.m
 M cat_vol_mp2rage.m

Changed:   Shortened waiting time for the creation of the log files in cat_run. 
Changed:   Changed bias-correction parameter setting in MP2Rage script. 
Fixed:     Corrected bug in cat_surf_create_hull_surface that prevent displaying
           of the mesh overlay in the CAT report.
------------------------------------------------------------------------
r2211 | rdahnke | 2023-06-02 22:08:11

Changed paths:
 M CHANGES.txt
 M cat_main1639.m
 M cat_vol_partvol1639.m

Changed:   Update blood vessel correction to reduce cutting of gyri with 
           extopts.experimental==1 (developer GUI). Tests showed better results
           for CS2 but still local problems for CS3.------------------------------------------------------------------------
r2209 | rdahnke | 2023-05-26 15:00:52

Changed paths:
 M CHANGES.txt
 M cat_conf_tools.m
 M cat_vol_inpaint.m

Changed:   Update MP2Rage function cat_vol_mp2rage and batch in cat_conf_tools.
           Added help, bias correction, integrated SPM preprocessing, report, 
           batch file dependencies. 
Changed:   Added verbose setting (default=0 i.e. no progress bar) to  
           cat_vol_inpaint function.  ------------------------------------------------------------------------
r2208 | gaser | 2023-05-19 11:43:40

Changed paths:
 M CHANGES.txt
 M cat_vol_img2mip.m

Fixed: Added check to cat_vol_img2mip.m for empry results/images.
------------------------------------------------------------------------
r2207 | rdahnke | 2023-05-15 12:22:43

Changed paths:
 M CHANGES.txt
 M cat_conf_tools.m

New:     Added experimental function and batch to optimise MP2Rage data for CAT
         preprocessing.------------------------------------------------------------------------
r2206 | gaser | 2023-05-11 12:08:58

Changed paths: